k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ingress-service
spec:
  type: ClusterIP
  selector:
    component: test-ingress
  ports:
    -  port: 3000
       targetPort: 3000
